# EvaluateExpression

./: CMakeLists.txt  calcSuffix.cpp  calcSuffix.h  infixToSuffix.cpp  infixToSuffix.h  main.cpp  myCalculate.cpp  myCalculate.h  myPrecede.cpp  myPrecede.h  readNum.cpp  readNum.h  strTest.cpp  strTest.h
